[gd_scene load_steps=4 format=3 uid="uid://cb5w2yq6f7axj"]

[ext_resource type="Script" uid="uid://7b8t1rokifof" path="res://Entities/Letters/LetterDisplay/letter_Display.gd" id="1_r0arm"]
[ext_resource type="PackedScene" uid="uid://bcvgb1vvjwqv0" path="res://Entities/Letters/Death/death_mark.tscn" id="3_oaod5"]
[ext_resource type="FontFile" uid="uid://cltoojf5br46e" path="res://fonts/SpicyNoodle-K7X5X.ttf" id="4_cmgim"]

[node name="LetterDisplay" type="Control"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_r0arm")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="UpgradeLabel" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -104.0
offset_right = 10.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LetterLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -50.0
offset_right = 41.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(40, 55)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 23
theme_override_font_sizes/font_size = 79
text = "A"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_right = 27.0
offset_bottom = 10.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.26293, 0.480554, 0.995333, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("4_cmgim")
theme_override_font_sizes/font_size = 30
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ATKLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -26.0
offset_bottom = 8.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.835294, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("4_cmgim")
theme_override_font_sizes/font_size = 30
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathMark" parent="Panel" instance=ExtResource("3_oaod5")]
visible = false
position = Vector2(50, 51)
scale = Vector2(2.57143, 2.6129)
